<resources>
    <string name="app_name">OPSC7311_POE_ParadoxPlanner</string>
    <string name="todo" />
    <string name="btnAdd" />
    <string name="category">Category:</string>
    <string name="timesheet_name">TimeSheet Name:</string>
    <string name="hirenethan">HirenEthan</string>
    <string name="categoryItem">Category:</string>
    <string name="human">Human</string>
    <string name="start_date">Start Date:</string>
    <string name="_12_01_2024">12/01/2024</string>
    <string name="end_date">End Date:</string>
    <string name="_25_04_2024">25/04/2024</string>
    <string name="category_name">Category Name:</string>
    <string name="dogs">Dogs</string>
    <string name="select_project" />
    <string name="select_task" />
    <string name="startss" />
    <string name="stopss" />
    <string name="stops">string</string>
    <string name="starts">string</string>
    <string name="max_goals">Max Goal</string>
    <string name="enter_max_goals">Enter max goal [hrs]</string>
    <string name="min_goals">Min Goal</string>
    <string name="enter_min_goals">Enter min goal [hrs]</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="goal_timer">GOAL TIMER</string>
    <string name="back">Back</string>
    <string name="badge_image">badge</string>
    <string name="save_goals" />
    <string name="savegoals">string</string>
</resources>